# sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: README.md  generate_schema.py
src/thecompaniesapi/: __init__.py  sdk.py
tests/: conftest.py  test_client.py  test_integration.py
