[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "thecompaniesapi"
version = "1.0.2"
authors = [{ name = "The Companies API SARL", email = "yael@thecompaniesapi.com" }]
dependencies = [
    "requests >= 2.28.1",
    "urllib3 >= 1.26.0"
]
description = "Python SDK for The Companies API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
[project.optional-dependencies]
test = [
    "pytest >= 6.0",
    "pytest-mock >= 3.0",
    "responses >= 0.20.0",
    "python-dotenv >= 0.19.0"
]
codegen = [
    "datamodel-code-generator[http] >= 0.21.0",
    "pydantic >= 2.0.0"
]
[project.urls]
"Homepage" = "https://www.thecompaniesapi.com/"
"Docs" = "https://www.thecompaniesapi.com/api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)"
]
